--- a/Core/CarBook.Application/CarBook.Application.csproj
+++ b/Core/CarBook.Application/CarBook.Application.csproj
@@ -10,4 +10,8 @@
     <ProjectReference Include="..\CarBook.Domain\CarBook.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Features\CQRS\Results\BannerResults\" />
+  </ItemGroup>
+
 </Project>
